--- a/report/method.tex
+++ b/report/method.tex
@@ -1,5 +1,7 @@
 %!TEX root = report.tex
 
+\todo[inline]{Stretchen ergens noemen}
+
 When simulating the dynamics of cracking material, one needs a model that represents the properties of that materials, mud in our case. In \cref{ss:method:model} we present our model. \Cref{ss:method:vogel} presents the model introduced by \citeauthor{vogel2005studies2} on which ours is loosely based. So that we can contrast the two models in \cref{ss:method:contrast}.
 
 \subsection{The model}\label{ss:method:model} \rick{Ik heb hem nagelezen. Er staat een extra todo in en ik heb de verschillende methods om veren te breken hier besproken. Zodat de implementatie sectie echt implementatie blijft.}
