--- a/report/results_greater.tex
+++ b/report/results_greater.tex
@@ -6,7 +6,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_0}
-	\caption{Step 0}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:0}
 \end{subfigure}
 \begin{subfigure}{0.16\textwidth}
@@ -16,7 +16,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_1}
-	\caption{Step 1}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:1}
 \end{subfigure}	
 \begin{subfigure}{0.16\textwidth}
@@ -26,7 +26,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_2}
-	\caption{Step 2}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:2}
 \end{subfigure}		
 \begin{subfigure}{0.16\textwidth}
@@ -36,7 +36,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_3}
-	\caption{Step 3}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:3}
 \end{subfigure}			
 
@@ -47,7 +47,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_4}
-	\caption{Step 4}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:4}
 \end{subfigure}				
 \begin{subfigure}{0.16\textwidth}
@@ -57,7 +57,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_5}
-	\caption{Step 5}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:5}
 \end{subfigure}
 \begin{subfigure}{0.16\textwidth}
@@ -67,7 +67,7 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_6}
-	\caption{Step 6}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:6}
 \end{subfigure}	
 \begin{subfigure}{0.16\textwidth}
@@ -77,6 +77,6 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_greater_104_step_7}
-	\caption{Step 7}
+	\caption{}
 	\label{fig:experiment:greaterThanStrain:7}
 \end{subfigure}		
