--- a/report/results_stretchHighest.tex
+++ b/report/results_stretchHighest.tex
@@ -6,8 +6,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_0}
-	\caption{Step 0}
-	\label{fig:experiment:stretchHighestStrain:0}
+	%\caption{Step 0}
+	%\label{fig:experiment:stretchHighestStrain:0}
 \end{subfigure}	
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -16,8 +16,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_1}
-	\caption{Step 1}
-	\label{fig:experiment:stretchHighestStrain:1}
+	%\caption{Step 1}
+	%\label{fig:experiment:stretchHighestStrain:1}
 \end{subfigure}		
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -26,8 +26,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_2}
-	\caption{Step 2}
-	\label{fig:experiment:stretchHighestStrain:2}
+	%\caption{Step 2}
+	%\label{fig:experiment:stretchHighestStrain:2}
 \end{subfigure}			
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -36,8 +36,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_3}
-	\caption{Step 3}
-	\label{fig:experiment:stretchHighestStrain:3}
+	%\caption{Step 3}
+	%\label{fig:experiment:stretchHighestStrain:3}
 \end{subfigure}				
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -46,8 +46,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_4}
-	\caption{Step 4}
-	\label{fig:experiment:stretchHighestStrain:4}
+	%\caption{Step 4}
+	%\label{fig:experiment:stretchHighestStrain:4}
 \end{subfigure}
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -56,8 +56,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_5}
-	\caption{Step 4}
-	\label{fig:experiment:stretchHighestStrain:5}
+	%\caption{Step 4}
+	%\label{fig:experiment:stretchHighestStrain:5}
 \end{subfigure}
 
 \begin{subfigure}{0.16\textwidth}
@@ -67,8 +67,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_50}
-	\caption{Step 50}
-	\label{fig:expe riment:stretchHighestStrain:50}
+	%\caption{Step 50}
+	%\label{fig:expe riment:stretchHighestStrain:50}
 \end{subfigure}	
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -77,8 +77,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_51}
-	\caption{Step 51}
-	\label{fig:experiment:stretchHighestStrain:51}
+	%\caption{Step 51}
+	%\label{fig:experiment:stretchHighestStrain:51}
 \end{subfigure}		
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -87,8 +87,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_52}
-	\caption{Step 52}
-	\label{fig:experiment:stretchHighestStrain:52}
+	%\caption{Step 52}
+	%\label{fig:experiment:stretchHighestStrain:52}
 \end{subfigure}			
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -97,8 +97,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_53}
-	\caption{Step 53}
-	\label{fig:experiment:stretchHighestStrain:53}
+	%\caption{Step 53}
+	%\label{fig:experiment:stretchHighestStrain:53}
 \end{subfigure}				
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -107,8 +107,8 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_80}
-	\caption{Step 80}
-	\label{fig:experiment:stretchHighestStrain:80}
+	%\caption{Step 80}
+	%\label{fig:experiment:stretchHighestStrain:80}
 \end{subfigure}
 \begin{subfigure}{0.16\textwidth}
 	\centering
@@ -117,6 +117,6 @@
 		height=\textwidth, 
 		keepaspectratio=true]
 	{./img/results/1200_0_1_stretchHighest_97_step_100}
-	\caption{Step 100}
-	\label{fig:experiment:stretchHighestStrain:100}
+	%\caption{Step 100}
+	%\label{fig:experiment:stretchHighestStrain:100}
 \end{subfigure}
