--- a/report/experiment.tex
+++ b/report/experiment.tex
@@ -1,5 +1,5 @@
 %!TEX root = report.tex
-In this section we present and discuss some of the experiments we have performed with our simulation. Each experiment in this section was performed on a grid of 1200 particles, with the spring constants sampled from a normal distribution with a mean of 0 and a standard deviation of 0.99. The seed was reset to the same value at the start of each simulation, consequently all initial grids have the same spring constants. When a number of springs under the highest strain was broken, we broken 97 springs at each step. When the second method was used we broke the springs with a strain greater than 1.04 If springs were stretched $\vartheta = 0.1$.
+In this section we present and discuss some of the experiments we have performed with our simulation. Each experiment in this section was performed on a grid of 1200 particles, with the spring constants sampled from a normal distribution with a mean of 0 and a standard deviation of 0.99. The seed was reset to the same value at the start of each simulation, consequently all initial grids have the same spring constants. When a number of springs under the highest strain where broken, we broke 97 springs at each step. When the second method was used, we broke the springs with a strain greater than $1.04$. % If springs were stretched $\vartheta = 0.1$.
 
 Below we discuss the possible combinations of breaking versus stretching and the different conditions under which springs are either broken or stretched. Lastly we review the parameters that influence the breaking and stretching of springs.
 
